--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -2,6 +2,7 @@
 
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "status-tag.njk" import renderStatusTag %}
 
 {% block content %}
   {{ appHeading({
@@ -47,21 +48,12 @@
       {% if projects and projects.length > 0 %}
         {% set tableRows = [] %}
         {% for project in projects %}
-          {% set statusClass = '' %}
-          {% if project.status === 'RED' %}
-            {% set statusClass = 'govuk-tag--red' %}
-          {% elif project.status === 'AMBER' %}
-            {% set statusClass = 'govuk-tag--yellow' %}
-          {% elif project.status === 'GREEN' %}
-            {% set statusClass = 'govuk-tag--green' %}
-          {% endif %}
-
           {% set row = [
             {
               html: "<a href='/projects/" + project.id + "' class='govuk-link'>" + project.name + "</a>"
             },
             {
-              html: "<strong class='govuk-tag " + statusClass + "'>" + project.status + "</strong>"
+              html: renderStatusTag(project.status)
             }
           ] %}
           {% set tableRows = (tableRows.push(row), tableRows) %}
