--- a/src/server/programmes/detail.njk
+++ b/src/server/programmes/detail.njk
@@ -1,6 +1,7 @@
 {% extends 'layouts/page.njk' %}
 
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "status-tag.njk" import renderStatusTag %}
 
 {% block content %}
   {{ appHeading({
@@ -13,21 +14,12 @@
       {% if projects.length > 0 %}
         {% set rows = [] %}
         {% for project in projects %}
-          {% set statusClass = "govuk-tag--grey" %}
-          {% if project.status === "RED" %}
-            {% set statusClass = "govuk-tag--red" %}
-          {% elif project.status === "AMBER" %}
-            {% set statusClass = "govuk-tag--yellow" %}
-          {% elif project.status === "GREEN" %}
-            {% set statusClass = "govuk-tag--green" %}
-          {% endif %}
-
           {% set row = [
             {
               html: "<a href='/projects/" + project.id + "' class='govuk-link'>" + project.name + "</a>"
             },
             {
-              html: "<strong class='govuk-tag " + statusClass + "'>" + project.status + "</strong>"
+              html: renderStatusTag(project.status)
             },
             {
               text: project.standardsNotMet
@@ -55,4 +47,4 @@
       {% endif %}
     </div>
   </div>
-{% endblock %} 
+{% endblock %}
