--- a/src/server/projects/detail/project-history.njk
+++ b/src/server/projects/detail/project-history.njk
@@ -2,6 +2,7 @@
 
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/tag/macro.njk" import govukTag %}
+{% from "status-tag.njk" import renderStatusTag %}
 
 {% block content %}
   {{ appHeading({
@@ -22,13 +23,7 @@
                 {% elif change.changes.status and change.changes.status.from !== change.changes.status.to %}
                   {# Project overall status update #}
                   Delivery status update:
-                  <strong class="govuk-tag 
-                    {% if change.changes.status.to === 'RED' %}govuk-tag--red
-                    {% elif change.changes.status.to === 'AMBER' %}govuk-tag--yellow
-                    {% elif change.changes.status.to === 'GREEN' %}govuk-tag--green
-                    {% endif %}">
-                    {{ change.changes.status.to }}
-                  </strong>
+                  {{ renderStatusTag(change.changes.status.to) }}
                 {% elif change.changes.name %}
                   Project name updated
                 {% elif change.changes.commentary and change.type === 'project' %}
@@ -62,4 +57,4 @@
       }) }}
     </div>
   </div>
-{% endblock %} 
+{% endblock %}
