--- a/src/server/projects/detail/manage.njk
+++ b/src/server/projects/detail/manage.njk
@@ -48,7 +48,7 @@
 
     {{ govukInput({
       label: {
-        text: "DEFRA Code",
+        text: "Project ID",
         classes: "govuk-label--m"
       },
       hint: {
